--- a/features/ui/pom.xml
+++ b/features/ui/pom.xml
@@ -21,6 +21,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-extensions</artifactId>
+            <version>${wicket.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.code-house.service</groupId>
             <artifactId>api</artifactId>
         </dependency>
