--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -35,6 +35,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.code-house.service</groupId>
+            <artifactId>jmx</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.karaf.jaas</groupId>
             <artifactId>org.apache.karaf.jaas.boot</artifactId>
             <version>2.3.1</version>
